--- a/src/main/resources/static/exchangeRatePrice.html
+++ b/src/main/resources/static/exchangeRatePrice.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="position: relative;" align="center"  >
-    <img src="/slogo.jpg">
+    <img src="img/slogo.jpg">
     <h3 style="color: red; position: absolute; left: 75%; top: 30%; font-family: 黑体;" th:text="${updateTime}"></h3>
 </div>
 <div align="center">
