--- a/src/main/resources/static/dataConvert/setting.html
+++ b/src/main/resources/static/dataConvert/setting.html
@@ -4,7 +4,61 @@
     <title>数据转换规则配置</title>
 </head>
 <body>
+<div align = "center">
+    <h2>业务规则转换明细</h2>
+    <table style="border-spacing : 30px" name = "dataConvertRuleDetails" >
+        <tr>
+            <th style="font-family: 黑体">业务字段</th>
+            <th style="font-family: 黑体">表字段</th>
+            <th style="font-family: 黑体">创建时间</th>
+            <th style="font-family: 黑体">创建人</th>
+            <th style="font-family: 黑体">修改时间</th>
+            <th style="font-family: 黑体">修改人</th>
+            <th style="font-family: 黑体">操作</th>
+        </tr>
+        <tr th:each="detail,ruleStat : ${details}">
+            <td th:text="${detail.bizFieldName}"></td>
+            <td th:text="${detail.dbFieldName}"></td>
+            <td th:text="${detail.createTime}"></td>
+            <td th:text="${detail.creator}"></td>
+            <td th:text="${detail.modifyTime}"></td>
+            <td th:text="${detail.modifier}"></td>
+        </tr>
+    </table>
+    </div>
+    <div name ="importRuleDetail" align="center">
+        <form id="importDetailForm" action="/dataConvert/importRuleDetail" method="post" enctype="multipart/form-data">
+            <label>导入规则明细的EXCEL</label>
+            <input type="hidden" name="ruleId" th:value="${ruleId}">
+            <input type="file" name="fileParam">
+            <input type="button" value="提 交" onclick="sub()"/>
+        </form>
+    </div>
+    <div>
+
+    </div>
+</body>
+<!--<script th:src="@{../js/jquery-3.3.1.min.js}" type="text/javascript"></script>-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script th:inline="javascript">
     var message = [[${title}]];
     console.log(message);
+    function sub() {
+        var formData = new FormData($("#importDetailForm")[0]);
+        $.ajax({
+            cache: true,
+            type: "POST",
+            url: "/dataConvert/importRuleDetail",
+            data: formData,
+            async: false,
+            processData: false,
+            contentType: false,
+            error: function (request) {
+                alert("error:" + request.error);
+            },
+            success: function (data) {
+                alert("SUCCESS!");
+            }
+        });
+    }
 </script>
